[package]
name = "libraw-sys"
version = "0.6.2"
edition = "2021"
license = "MIT"

build = "build.rs"

[dependencies]
libc = "0.2.123"
libjpeg-sys = { git = "https://github.com/aftershootco/libjpeg-sys", optional = true }

[build-dependencies]
bindgen = { version = "0.60.1", optional = true }
pkg-config = "0.3.25"
cc = { version = "1.0.73", optional = true, features = ["parallel"]}
# vergen = "7.3.2"
# anyhow = "= 1.0.48"

[features]
default = ["build"]
clone = []
bindgen = ["dep:bindgen", "clone"]
build = ["jpeg", "dep:cc", "clone", "jasper", "zlib"]
no-build = ['build', 'libjpeg-sys?/no-build']
copy = []
jasper = []
zlib = []
jpeg = ["dep:libjpeg-sys"]
