[package]
name = "libraw-sys"
version = "0.6.4"
edition = "2021"
license = "MIT"
build = "build.rs"
publish = ["ktra"]


[dependencies]
libc = "0.2.123"
mozjpeg-sys = { version = "1.0.3", optional = true }
# libjpeg-sys = { git = "https://github.com/aftershootco/libjpeg-sys", optional = true }

[build-dependencies]
bindgen = { version = "0.63.0", optional = true }
pkg-config = "0.3.26"
cc = { version = "1.0.73", optional = true, features = ["parallel"]}
# vergen = "7.3.2"
# anyhow = "= 1.0.48"

[features]
default = ["build"]
clone = []
bindgen = ["dep:bindgen", "clone"]
build = ["jpeg", "dep:cc", "clone", "zlib"]
no-build = []
copy = []
jasper = []
zlib = []
jpeg = ["dep:mozjpeg-sys"]
